# AndroidP7zip

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/java/com/hzy/p7zip/app/activity/: MainActivity.java
app/src/main/java/com/hzy/p7zip/app/adapter/: ArchiveListItemAdapter.java
app/src/main/java/com/hzy/p7zip/app/command/: Command.java
app/src/main/java/com/hzy/p7zip/app/fragment/: StorageFragment.java
app/src/main/res/layout/: archive_list_item.xml  archive_list_view.xml
app/src/main/res/values/: arrays.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
libp7zip/: CMakeLists.txt  build.gradle
libp7zip/src/main/java/com/hzy/libp7zip/: ArchiveFileMetadata.java  P7ZipApi.java
libp7zip/src/main/jni/: ndkhelper.h  p7zip.cpp
libp7zip/src/main/jni/cmd/: command.cpp  command.h
libp7zip/src/main/jni/p7zip/CPP/7zip/UI/Console/: List.cpp  List.h  Main.cpp  MainAr.cpp
libp7zip/src/main/jni/p7zip/CPP/Common/: ArchiveFileMetadata.h
